blog/manifests/wordpress/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - name: wordpress
          image: wordpress:latest
          resources:
            limits:
              memory: "256Mi"
              cpu: "700m"
          ports:
            - containerPort: 80
              name: wordpress
          volumeMounts:
            - name: wordpress-pvc
              mountPath: "/var/www/html"
      volumes:
        - name: wordpress-pvc
          persistentVolumeClaim:
            claimName: wordpress-pvc
